<resources>
    <string name="app_name">FollowConnect</string>
    <string name="app_name_homescreen">FollowConnect</string>
    <string name="signup"><font color="#979797">Don\'t have an account? </font> <font color="#112741"> <b>Sign Up </b></font> </string>
    <string name="signin"><font color="#979797">Already have an account? </font> <font color="#112741"> <b>Sign in </b></font> </string>
    <string name="sign_Up">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notifications</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="full_name">Full Name</string>
    <string name="todo">TODO</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="search_friends">Search Friends</string>
    <string name="Block_User">Block User</string>
    <string name="notifications">Notifications</string>
    <string name="videoPlay">SpoolVid</string>
    <string name="Un_Friend">Un Friend</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>

    <string name="server_error">Server not responding</string>
    <string name="pin_content_desc">PIN input field</string>

    <string name="check_network">Please check your internet connection !</string>
    <string name="search_Alert">Search Field can\'t be empty</string>
    <string name="alert_enterfullname">full name can\'t be Empty</string>
    <string name="alert_entereamil">email can\'t be empty</string>
    <string name="alert_entervalidemail">email not valid </string>
    <string name="alert_entermobileno">mobile no can\'t be empty</string>
    <string name="alert_entervalidmobileno">mobile no not valid</string>
    <string name="alert_countrycode">country code can\'t be empty</string>
    <string name="alert_enterpassword">password can\'t be empty</string>
    <string name="alert_entercurrentpassword">Current password can\'t be empty</string>
    <string name="alert_enternewpassword">New password can\'t be empty</string>
    <string name="alert_entercpassword">Confirm password can\'t be empty</string>
    <string name="alert_enterconfirmpassword">confirm password can\'t be empty</string>
    <string name="alert_passwordmissmatch">password and confirmpassword not same</string>
    <string name="alert_selectdob">please select dob</string>
    <string name="alert_selectgender">please select gender</string>
    <string name="alert_selectcountry">please select country</string>
    <string name="alert_enteruserid">user ID can\'t be empty</string>
    <string name="tab_text_1">"      MYVIEW       "</string>
    <string name="tab_text_2">"      IN TOTO      "</string>
    <string name="tab_text_3">"      SPOOLVID      "     </string>
    <string name="tab_text_4">"      CHAT      " </string>

    <string name="friends_Searchhint"><font size="14">Search for followers, friends and more</font></string>

    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <string name="web_client_id">7871621202-bka1lkig0so7hjdj3oqrad1fpefkk0f2.apps.googleusercontent.com</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="share_app_message">Follow and Connect</string>
    <string name="addas_afriend" >Add as a Friend</string>


</resources>