<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/ic_cardbackground"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_searchfriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="0dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="2">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/search_icon" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/search_friends"
                    android:textColor="@color/optionmenu_textcolor"
                    android:textSize="14sp"
                    android:textStyle="normal"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="0dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="2">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_notifications" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/notifications"
                    android:textColor="@color/optionmenu_textcolor"
                    android:textSize="14sp"
                    android:textStyle="normal"

                    />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="2">


                <ImageView
                    android:id="@+id/errimg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_settings" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/settings"
                    android:textColor="@color/optionmenu_textcolor"
                    android:textSize="14sp"
                    android:textStyle="normal"

                    />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"

                android:weightSum="2">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_logout" />


                <TextView

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:layout_gravity="center|start"

                    android:fontFamily="sans-serif-medium"

                    android:text="@string/logout"

                    android:textColor="@color/optionmenu_textcolor"
                    android:textSize="14sp"

                    android:textStyle="normal"

                    />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>