<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/root_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imgbtn_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/todo"
                android:foregroundGravity="center"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:layout_toEndOf="@id/imgbtn_notification"
                android:gravity="center_horizontal"
                android:letterSpacing="0.025"
                android:text="@string/search"
                android:textColor="@color/textColorthick"
                android:textSize="20sp"
                tools:targetApi="lollipop" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_toolbar"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:id="@+id/rl_searchview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:background="@color/colorPrimary">


                <EditText
                    android:id="@+id/searchfriends_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@color/WHITE"
                    android:drawablePadding="10dp"
                    android:hint="@string/friends_Searchhint"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    tools:ignore="RtlSymmetry" />

                <ImageButton
                    android:id="@+id/btn_img_Searchfrnd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="@color/BLUE"
                    android:src="@drawable/search_friendsearchicon"

                    />


            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_rl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.025"
        android:text="Recent Searches"
        android:textColor="@color/textColorthick"
        android:textSize="14dp"
        tools:targetApi="lollipop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_userSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:background="@color/WHITE" />


</RelativeLayout>
